--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "private": true,
   "devDependencies": {
+    "browserify": "^10.2.4",
+    "es6ify": "^1.6.0",
     "gulp": "^3.8.8",
+    "gulp-livereload": "^3.8.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.2",
-    "gulp-watch": "^4.2.4"
+    "gulp-util": "^3.0.6",
+    "gulp-watch": "^4.2.4",
+    "react": "^0.13.3",
+    "reactify": "^1.1.1",
+    "rename": "^1.0.3",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.3"
   }
 }
