--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^2.1.4",
     "q": "^1.4.1",
     "q-xhr": "^0.1.3",
+    "react-router": "^1.0.0-beta2",
     "underscore": "^1.8.3"
   }
 }
