--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "es6ify": "^1.6.0",
     "gulp": "^3.8.8",
     "gulp-livereload": "^3.8.0",
+    "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.2",
     "gulp-util": "^3.0.6",
@@ -19,7 +20,7 @@
     "jquery": "^2.1.4",
     "q": "^1.4.1",
     "q-xhr": "^0.1.3",
-    "react-router": "^1.0.0-beta2",
+    "react-router": "^0.13.3",
     "underscore": "^1.8.3"
   }
 }
