--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "devDependencies": {
     "browserify": "^10.2.4",
-    "es6ify": "^1.6.0",
+    "watchify": "^3.2.3",
+    "babelify": "^6.1.2",
     "gulp": "^3.8.8",
     "gulp-livereload": "^3.8.0",
     "gulp-notify": "^2.2.0",
@@ -10,16 +11,14 @@
     "gulp-sass": "^2.0.2",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.2.4",
-    "react": "^0.13.3",
-    "reactify": "^1.1.1",
     "rename": "^1.0.3",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.3"
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "jquery": "^2.1.4",
     "q": "^1.4.1",
     "q-xhr": "^0.1.3",
+    "react": "^0.13.3",
     "react-router": "^0.13.3",
     "underscore": "^1.8.3"
   }
