--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "jquery": "^2.1.4",
+    "nanoscope": "^2.2.0",
     "q": "^1.4.1",
     "q-xhr": "^0.1.3",
     "react": "^0.13.3",
