--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "q-xhr": "^0.1.3",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
+    "socket.io-client": "^1.3.5",
     "underscore": "^1.8.3"
   }
 }
