--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "rename": "^1.0.3",
     "vinyl-source-stream": "^1.1.0"
   },
+  "scripts": {
+    "start": "echo 'Starting notifications server' && cd ./src/notifications/ && npm start"
+  },
   "dependencies": {
     "jquery": "^2.1.4",
     "nanoscope": "^2.2.0",
