--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "start": "echo 'Starting notifications server' && cd ./src/notifications/ && npm start"
   },
   "dependencies": {
+    "cookie": "^0.1.3",
     "jquery": "^2.1.4",
     "nanoscope": "^2.2.0",
     "q": "^1.4.1",
     "q-xhr": "^0.1.3",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
+    "redis": "^0.12.1",
+    "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
     "underscore": "^1.8.3"
   }
