--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
 language: python
-python:
-  - "2.6"
-  - "2.7"
-  - "3.2"
-  - "3.3"
-  - "3.4"
-  - "nightly"
+python: "3.4"
+
 # command to install dependencies
-install: "pip install -r requirements"
+install: "make install"
+
 # command to run tests
-script: nosetests
+script: "make test"
