Attempt to cache pip in travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ install: "make travis-install"
 # command to run tests
 script: "make travis-test"
 
+# cache deps
+cache: pip
+
 # setting the notification level to none
 notifications:
   email: false
