--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "private": true,
   "devDependencies": {
-    "browserify": "^10.2.4",
-    "watchify": "^3.2.3",
     "babelify": "^6.1.2",
+    "browserify": "^10.2.4",
     "gulp": "^3.8.8",
     "gulp-livereload": "^3.8.0",
     "gulp-notify": "^2.2.0",
@@ -12,18 +11,21 @@
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.2.4",
     "rename": "^1.0.3",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.3"
   },
   "scripts": {
     "start": "echo 'Starting notifications server' && cd ./src/notifications/ && npm start"
   },
   "dependencies": {
     "jquery": "^2.1.4",
+    "material-ui": "^0.10.0",
     "nanoscope": "^2.2.0",
     "q": "^1.4.1",
     "q-xhr": "^0.1.3",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
+    "react-tap-event-plugin": "^0.1.7",
     "socket.io-client": "^1.3.5",
     "underscore": "^1.8.3"
   }
