--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^2.1.4",
     "material-ui": "^0.10.0",
     "nanoscope": "^2.2.0",
+    "object-assign": "^3.0.0",
     "q": "^1.4.1",
     "q-xhr": "^0.1.3",
     "react": "^0.13.3",
