--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "echo 'Starting notifications server' && cd ./src/notifications/ && npm start"
   },
   "dependencies": {
+    "classnames": "^2.1.3",
     "cookies-js": "^1.2.1",
     "jquery": "^2.1.4",
     "material-ui": "^0.10.0",
