--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "react-tap-event-plugin": "^0.1.7",
+    "reflux": "^0.2.11",
     "socket.io-client": "^1.3.5",
     "underscore": "^1.8.3"
   }
