Added forum thread delete to server/client
This includes the required store updates and an extensive forum store update,
because it didn't represent the data structure complexity properly (forum parts were ignored...)

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookies-js": "^1.2.1",
     "jquery": "^2.1.4",
     "material-ui": "^0.10.0",
+    "moment": "^2.10.6",
     "nanoscope": "^2.2.0",
     "object-assign": "^3.0.0",
     "q": "^1.4.1",
