--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "object-assign": "^3.0.0",
     "q": "^1.4.1",
     "q-xhr": "^0.1.3",
+    "query-string": "^2.4.0",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "react-tap-event-plugin": "^0.1.7",
