--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "private": true,
   "devDependencies": {
-    "babelify": "^6.1.2",
-    "browserify": "^10.2.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-react": "6.3.13",
+    "babelify": "7.2.0",
+    "browserify": "^12.0.1",
     "gulp": "^3.8.8",
     "gulp-livereload": "^3.8.0",
     "gulp-notify": "^2.2.0",
@@ -18,21 +21,27 @@
     "start": "echo 'Starting notifications server' && cd ./src/notifications/ && npm start"
   },
   "dependencies": {
-    "classnames": "^2.1.3",
-    "cookies-js": "^1.2.1",
-    "jquery": "^2.1.4",
-    "material-ui": "^0.10.0",
+    "bufferutil": "^1.2.1",
+    "classnames": "^2.1.x",
+    "cookies-js": "^1.2.x",
+    "history": "^1.17.x",
+    "jquery": "^2.1.x",
+    "material-ui": "^0.14.1",
     "moment": "^2.10.6",
-    "nanoscope": "^2.2.0",
-    "object-assign": "^3.0.0",
-    "q": "^1.4.1",
-    "q-xhr": "^0.1.3",
-    "query-string": "^2.4.0",
-    "react": "^0.13.3",
-    "react-router": "^0.13.3",
-    "react-tap-event-plugin": "^0.1.7",
-    "reflux": "^0.2.11",
-    "socket.io-client": "^1.3.5",
-    "underscore": "^1.8.3"
+    "object-assign": "^4.0.x",
+    "q": "^1.4.x",
+    "q-xhr": "^1.0.0",
+    "query-string": "^3.0.x",
+    "react": "^0.14.x",
+    "react-dom": "^0.14.x",
+    "react-redux": "^4.0.x",
+    "react-router": "^1.0.x",
+    "react-tap-event-plugin": "^0.2.1",
+    "redux": "3.0.x",
+    "redux-devtools": "^3.0.x",
+    "reflux": "^0.3.0",
+    "socket.io-client": "^1.4.2",
+    "underscore": "^1.8.3",
+    "utf-8-validate": "^1.2.1"
   }
 }
