--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "devDependencies": {
+    "babel-plugin-react-transform": "^2.0.0",
     "babel-plugin-transform-es2015-modules-commonjs": "",
     "babel-preset-es2015": "6.3.13",
     "babel-preset-react": "6.3.13",
@@ -13,21 +14,28 @@
     "gulp-sass": "^2.0.2",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.2.4",
+    "react-transform-catch-errors": "^1.0.1",
+    "react-transform-hmr": "^1.0.1",
+    "redbox-react": "^1.2.0",
     "redux-devtools-dock-monitor": "^1.0.1",
     "redux-devtools-log-monitor": "^1.0.1",
     "rename": "^1.0.3",
     "vinyl-source-stream": "^1.1.0",
+    "vinyl-transform": "^1.0.0",
     "watchify": "^3.2.3"
   },
   "scripts": {
     "start": "echo 'Starting notifications server' && cd ./src/notifications/ && npm start"
   },
   "dependencies": {
+    "browserify-hmr": "^0.3.1",
     "bufferutil": "^1.2.1",
     "classnames": "^2.1.x",
     "cookies-js": "^1.2.x",
     "history": "^1.17.x",
+    "immutable": "^3.7.6",
     "jquery": "^2.1.x",
+    "lodash": "^3.10.1",
     "material-ui": "^0.14.1",
     "moment": "^2.10.6",
     "normalizr": "^1.4.1",
