--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "redux-thunk": "^1.0.3",
     "socket.io-client": "^1.4.2",
     "underscore": "^1.8.3",
-    "utf-8-validate": "^1.2.1"
+    "utf-8-validate": "^1.2.1",
+    "json3": "^3.3.2"
   }
 }
